# hexlet_pytest

./: pyproject.toml
tests/: testStack.py
